--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>p5.js Project</title>
+    <title>posenet-visualization</title>
 
     <!-- import the stylesheet -->
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<body></body>
+<body>
+
+</body>
 
 <!-- import the javascript library file(s) -->
 <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.min.js" crossorigin="anonymous"></script>
